[package]
name = "rust-cms"
version = "0.1.0"
authors = ["spbills <spencebills0@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
serde = { version = "1.0.118" }
serde_json = "1.0.60"
diesel = {version = "1.4.5", features= ["mysql","chrono","r2d2"]}
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0.22"
actix-files = "0.5.0"
askama = "0.10.5"