[package]
name = "radical"
version = "0.1.4"
authors = ["spbills <spencebills0@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# web
actix-web = "3"
actix-files = "0.5.0"
actix-cors = "0.5.4"
actix-ratelimit = "0.3.1"

# encryption
jsonwebtoken = "7"
argon2 = "0.2"
rand_core = { version = "0.6", features = ["std"] }

# serialization
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0.60"

# database
diesel = {version = "1.4.5", features= ["mysql","chrono","r2d2"]}
diesel_migrations = "1.4.0"
chrono = { version = "0.4", features = ["serde"] }

# templating
handlebars = {version = "3.5.2", features = ["dir_source"]}
notify = "4.0.16"

# utility
thiserror = "1.0.22"
log = "0.4.0"
env_logger = "0.8.4"
envy = "0.4"
dotenv = "*"
uuid = {version = "0.8", features=["serde", "v4"]}
futures = "*"
time = "0.2.23"

[dev-dependencies]
actix-rt = "2.2.0"
